--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,7 @@ Pillow
 torch>=1.3.0
 torchvision
 progress
+gradio
+matplotlib
 git+https://github.com/ildoonet/pytorch-gradual-warmup-lr.git
+torchsummary
